# simrard

./: .gitignore  AGENTS.md  Cargo.toml  ImplementationPlan.md  LICENSE  TODO.md  test.sh
.agents/: README.md
.agents/skills/baseline-agent-practices/: SKILL.md
.agents/skills/example-skill/: SKILL.md
.agents/skills/rust-r2026t/: SKILL.md  splitting-and-features.md  tooling.md
.agents/skills/rust-r2026t/rust-r2026t/: SKILL.md  cargo-config.md  testing-strategy.md  workspace-layout.md
.agents/skills/simrard-development/: SKILL.md
.agents/workflows/: example-workflow.md
.cargo/: config.toml
.cursor/plans/: absorb_big-brain_bevy_0.18_11d05f1d.plan.md  design_doc_corrections_post-review_bc6c4da1.plan.md  phase_4_implementation_plan_416b7fae.plan.md
.cursor/rules/: .airules-state  README.md  RUST-R2025T.md  baseline-agent-practices.mdc  baseline-contributing.mdc  fail-fast.mdc  git-safety.mdc  mdc-rules-configuration.mdc  repo-awareness.mdc  rust-r2025t-core.mdc  rust-r2025t-crate-structure.mdc  rust-r2025t-features.mdc  rust-r2025t-file-naming.mdc  rust-r2025t-microcrate-splitting.mdc  rust-r2025t-testing.mdc  rust-r2025t-tooling.mdc  rust-r2026t.mdc  simrard-conventions.mdc  simrard-wolfram-tiebreaker.mdc  todo-conventions.mdc  warnings-as-errors.mdc
.github/: BRANCH_PROTECTION.md  branch-protection-main.json  copilot-instructions.md  dependabot.yml
.github/prompts/: plan-phase4CompletenessAndOrderingAudit.prompt.md
docs/: RUNNING.md  rust-2026-trahloc.md
docs/Creatures/: Appearance - Creatures Wiki.html  Biochemistry - Creatures Wiki.html  Brain - Creatures Wiki.html  C3 Chemical List - Creatures Wiki.html  CAOS - Creatures Wiki.html  GEN files - Creatures Wiki.html  Gait - Creatures Wiki.html  Gene - Creatures Wiki.html  Genetics - Creatures Wiki.html  Initial concentration - Creatures Wiki.html  Learning Room - Creatures Wiki.html  Mutation - Creatures Wiki.html  Pigment - Creatures Wiki.html
docs/Creatures/C3 Chemical List - Creatures Wiki_files/: load(2).php
docs/Creatures/CAOS - Creatures Wiki_files/: load.php
docs/Creatures/Genetics - Creatures Wiki_files/: load.php
docs/Creatures/Initial concentration - Creatures Wiki_files/: load(1).php
docs/Creatures/Mutation - Creatures Wiki_files/: load.php
docs/Creatures/markdown/: Appearance.md  Biochemistry.md  Brain.md  C3 Chemical List.md  CAOS.md  Creatures_Entertainment_Software_Agents_with_Artif.md  GEN files.md  Gait.md  Gene.md  Genetics.md  Initial concentration.md  Learning Room.md  Mutation.md  Pigment.md
docs/Design/: 00_core_constraints.md  01_design_philosophy.md  02_mod_and_data_architecture.md  03_engine_architecture.md  04_agent_cognition.md  05_simulation_systems.md  06_next_steps.md  07_system_precondition_graph_draft.md
docs/mod_metadata/: OPEN_MOD_PLEDGE.md  README.md
docs/mod_metadata/examples/: README.md  mod_manifest.full.json  mod_manifest.minimal.json
docs/reports/: 1773560478_phase_4_execution_log.md  README.md
lib/ai/: Cargo.toml  ai.rs
lib/causal/: Cargo.toml  causal.rs  heartbeat.rs
lib/charter/: Cargo.toml  charter.rs  lease.rs  map.rs  watchguard.rs
lib/hypergraph/: Cargo.toml  default_rules.ron  hypergraph.rs
lib/mirror/: Cargo.toml  build.rs  mirror.rs
lib/pawn/: Cargo.toml  pawn.rs
lib/tier4/: Cargo.toml  tier4.rs
lib/time/: Cargo.toml  time.rs
lib/transforms/: Cargo.toml  hot_reload.rs  schema.rs  transforms.rs  validation.rs
lib/utility_ai/: Cargo.toml  NOTICE
lib/utility_ai/derive/: Cargo.toml
lib/utility_ai/derive/src/: action.rs  scorer.rs
lib/utility_ai/src/: actions.rs  lib.rs  pickers.rs  scorers.rs  thinker.rs
scripts/: check_internal_fallbacks.allowlist  check_internal_fallbacks_in_diff.sh  rustc-wrapper.sh
tests/: Cargo.toml  integration.rs
transforms/: test.json
