[workspace]
members = ["bin", "lib/*", "tests"]
resolver = "2"

[workspace.dependencies]
bevy = "0.18"
serde = "1.0.228"
serde_json = "1.0.149"
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"

[workspace.lints.rust]
unused_imports = "deny"
dead_code = "deny"
unused_variables = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.dev.package."*"]
opt-level = 2
