[package]
name = "simrard-lib-causal"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "simrard_lib_causal"
path = "causal.rs"

[lints]
workspace = true

[dependencies]
bevy = { workspace = true }
simrard-lib-charter = { path = "../charter" }
simrard-lib-pawn = { path = "../pawn" }
simrard-lib-time = { path = "../time" }
